--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "binstring": "^0.2.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
     "pug": "^2.0.0-rc.4",
