--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"},
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -13,7 +13,10 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
+    "opn": "^5.3.0",
     "pug": "^2.0.0-rc.4",
     "uuid": "^3.2.1"
+  },
+  "devDependencies": {
   }
 }
