--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"},
+    "start": "node index.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,6 +18,5 @@
     "pug": "^2.0.0-rc.4",
     "uuid": "^3.2.1"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
